Update ArrayListDemo.java